--- a/index.html
+++ b/index.html
@@ -139,10 +139,60 @@
                 <article class="offer">
                     <h1>Offer of the day<span>.</span></h1>
                     <p>Buy fisting for only 299 bucks, it usually costs 300 bucks, but today is a special promotion</p>
-                    <div><a href="#">BUY NOW</a></div>
+                    <div><a href="#" class="read-more">BUY NOW</a></div>
                 </article>
             </section>
+            <section class="fifth-section">
+                <h1>Better be pain in the muscles
+                    than drugs and alcohol <br>Guys hold on to each other, brother for brother and everything will be fucked up. <br>You need to arrange your life until it starts to suit you</h1>
+                <div class="image-section">
+                    <img src="images/section-image.jpg" alt="">
+                    <div class="text">
+                        <h3>Billy Herrington</h3>
+                        <p>Main gachi man</p>
+                    </div>
+                </div>
+            </section>
+            <section class="form-section">
+                <article class="text-section">
+                    <h1>GET IN TOUCH WITH US<span>.</span></h1>
+                    <hr>
+                </article>
+                <div class="form-flex">
+                    <form action="">
+                        <input name="contactName" type="text" id="contactName" placeholder="Name" value="" minlength="2" required="" aria-required="true"> <br>
+                        <input name="contactEmail" type="email" id="contactEmail" placeholder="Email" value="" required="" aria-required="true"> <br>
+                        <input name="contactSubject" type="text" id="contactSubject" placeholder="Subject" value=""><br>
+                        <textarea name="contactMessage" id="contactMessage" placeholder="Message" rows="10" cols="50" required="" aria-required="true"></textarea><br>
+                        <button class="submitform">Submit</button>
+                    </form>
+                    <aside>
+                        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem  accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis  et quasi  architecto  beatae vitae dicta sunt explicabo.</p>
+                        <h3>Come Visit</h3>
+                        <p>1600 Amphitheatre Parkway <br>
+                            Mountain View, CA <br>
+                            94043 US</p>
+                        <h3>Contact Numbers:</h3>
+                        <p>Phone: 8 800 555 35 35 <br>
+                            Mobile: (000) 555 0100 <br>
+                            Fax: (000) 555 0101</p>
+                    </aside>
+                </div>
+            </section>
         </article>
+        <footer>
+            <div class="social">
+                <ul>
+                    <li><a href="#"><i class="fa fa-facebook-official" aria-hidden="true"></i></a></li>
+                    <li><a href="#"><i class="fa fa-twitter-square" aria-hidden="true"></i></a></li>
+                    <li><a href="#"><i class="fa fa-google-plus-square" aria-hidden="true"></i></a></li>
+                    <li><a href="#"><i class="fa fa-youtube-play" aria-hidden="true"></i></a></li>
+                    <li><a href="#"><i class="fa fa-vimeo-square" aria-hidden="true"></i></a></li>
+                    <li><a href="#"><i class="fa fa-flickr"></i></a></li>
+                    <li><a href="#"><i class="fa fa-skype"></i></a></li>
+                </ul>
+            </div>
+        </footer>
     </header>
 </body>
 </html>
