--- a/index.html
+++ b/index.html
@@ -1,32 +1,29 @@
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/dist/main.css">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700;900&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="images/images.ico" type="image/x-icon">
-    <script src="https://use.fontawesome.com/6f9f2a52be.js"></script>
-    <title>Deep fantasy</title>
-</head>
 <body>
     <header>
-        <nav>
-            <div class="nav-logo">Fucking cuming</div>
+        <nav class="none-adaptive">
+            <div class="nav-logo">Fucking cummingy</div>
             <div class="navigation">
-                <div class="nav-1"><a href="#">Fisting.</a></div>
-                <div class="nav-2"><a href="#">Anal.</a></div>
+                <div class="nav-1"><a href="#">Dick.</a></div>
+                <div class="nav-2"><a href="#">Fuck.</a></div>
                 <div class="nav-3"><a href="#">Semen.</a></div>
-                <div class="nav-4"><a href="#">Dick.</a></div>
-                <div class="nav-5"><a href="#">Ass.</a></div>
+                <div class="nav-4"><a href="#">Anal.</a></div>
+                <div class="nav-5"><a href="#">Fisting.</a></div>
             </div>
             <div class="social-icons">
                 <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
                 <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
                 <a  href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
             </div>
+        </nav>
+        <nav class="main-menu">
+            <ul class="menu-link">
+                <li><a href="#" class="main-link">Dick.</a></li>
+                <li><a href="#" class="offer-link">Fuck.</a></li>
+                <li><a href="#" class="diet-link">Semen.</a></li>
+                <li><a href="#" class="contact-link">Anal.</a></li>
+                <li><a href="#" class="creator-link">Fisting.</a></li>
+            </ul>
+            <p class="menu-visible">Fucking menu</p>
         </nav>
         <article>
             <section class="first-section">
