--- a/index.html
+++ b/index.html
@@ -1,3 +1,19 @@
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/dist/main.css">
+    <link rel="stylesheet" href="css/dist/adaptice.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700;900&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="images/images.ico" type="image/x-icon">
+    <script src="https://code.jquery.com/jquery-2.2.4.min.js" type="text/javascript"></script>
+    <Script src="js/navigation.js"></Script>
+    <script src="https://use.fontawesome.com/6f9f2a52be.js"></script>
+    <title>Deep fantasy</title>
+</head>
 <body>
     <header>
         <nav class="none-adaptive">
