--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/libs/animate.css">
     <link rel="stylesheet" href="css/dist/main.css">
     <link rel="stylesheet" href="css/dist/adaptice.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -17,7 +18,7 @@
 <body>
     <header>
         <nav class="none-adaptive">
-            <div class="nav-logo">Fucking cummingy</div>
+            <div class="nav-logo">Fucking cumming</div>
             <div class="navigation">
                 <div class="nav-1"><a href="#">Dick.</a></div>
                 <div class="nav-2"><a href="#">Fuck.</a></div>
@@ -43,35 +44,42 @@
         </nav>
         <article>
             <section class="first-section">
-                    <h1>Guide into the world of the <span>♂️</span>REAL MEN<span>♂️</span><br>art, awaken my <span>♂️</span>DUNGEON MASTERS<span>♂️</span> <hr></h1>
-                    <p>It's ♂️FUCK YOU♂️ slightly. Just♂️finger♂️ tickles ♂️MY ASS♂️ <br>I, Giorno Giovanna, have a ♂️DEEP♂️ ♂️DARK♂️ ♂️FANTASY♂️ </p>
-                    <div class="button-read-more"><a href="#">More about us &#129095;</a></div>
+                    <h1 class="wow slideInLeft">Guide into the world of the <span>♂️</span>REAL MEN<span>♂️</span><br>art, awaken my <span>♂️</span>DUNGEON MASTERS<span>♂️</span> <hr></h1>
+                    <p class="wow pulse">It's ♂️FUCK YOU♂️ slightly. Just♂️finger♂️ tickles ♂️MY ASS♂️ <br>I, Giorno Giovanna, have a ♂️DEEP♂️ ♂️DARK♂️ ♂️FANTASY♂️ </p>
+                    <div class="button-read-more wow wobble"><a href="#">More about us &#129095;</a></div>
                     <img src="images/maxresdefault.jpg" class="background-image" alt="sorry :(">    
             </section>
             <section class="second-section">
                 <article class="text-section">
                 <div class="block-text">
-                        <h1>OUR COMUNITY <span>.</span></h1>
+                        <h1 class="wow slideInLeft">OUR COMUNITY <span>.</span></h1>
                         <hr>
-                        <p>You want me ♂FUCK♂-♂FUCK♂-♂FUCK♂ but i want ♂THREE HUNDRED BUCKS♂ I, Giorno Giovanna, have a ♂ DEEP ♂ DARK ♂ FANTASY ♂ It was not so, where is your vaunted ♂THREE HUNDRED BUCKS♂ AWAKEN MY ♂DUNGEON♂ ♂MASTERS♂ Creeper?! Ohhh ♂fuck you♂
+                        <p class="wow pulse">You want me ♂FUCK♂-♂FUCK♂-♂FUCK♂ but i want ♂THREE HUNDRED BUCKS♂ I, Giorno Giovanna, have a ♂ DEEP ♂ DARK ♂ FANTASY ♂ It was not so, where is your vaunted ♂THREE HUNDRED BUCKS♂ AWAKEN MY ♂DUNGEON♂ ♂MASTERS♂ Creeper?! Ohhh ♂fuck you♂
                         So we back in the ♂dungeon♂ Got our ♂dicks♂ swinging from ♂ass♂ to ♂ass♂ ♂Ass - ass♂ to ♂ass♂
                         </p>
                     </div>
                 </article>
-                <div class="block-photos">
-                    <img src="images/image1.jpg" alt=""><img src="images/image2.jpg" alt=""><img src="images/image3.jpg" alt=""><img src="images/image4.jpg" alt=""><img src="images/image5.jpg" alt=""><img src="images/image6.jpg" alt=""><img src="images/image7.jpg" alt=""><img src="images/image8.jpg" alt="">
+                <div class="block-photos wow slideInLeft">
+                    <img src="images/image1.jpg" alt="">
+                    <img src="images/image2.jpg" alt="">
+                    <img src="images/image3.jpg" alt="">
+                    <img src="images/image4.jpg" alt="">
+                    <img src="images/image5.jpg" alt="">
+                    <img src="images/image6.jpg" alt="">
+                    <img src="images/image7.jpg" alt="">
+                    <img src="images/image8.jpg" alt="">
                 </div>
             </section>
             <section class="third-section">
                 <article class="text-section">
                     <div class="block-text">
-                        <h1>OUR AWESOME SERVICES<span>.</span></h1>
+                        <h1 class="wow slideInLeft">OUR AWESOME SERVICES<span>.</span></h1>
                         <hr>
-                        <p>♂FUCK♂ и ♂ANAL♂ If we are asked: "Where from, ♂Sir♂?" We answer -♂ASS♂! ♂FUCK YOU!♂ — ♂FUCK YOU, LEATHERMAN!♂ Billy Herrington. Van Darkholm Danny Lee Mark Wolff Ricardo Milos Aka-sanotam rem aperiam,  laudantium, totam rem aperia eaque ipsa quae ab illo inventore veritatis et ♂ASS♂
+                        <p class="wow pulse">♂FUCK♂ и ♂ANAL♂ If we are asked: "Where from, ♂Sir♂?" We answer -♂ASS♂! ♂FUCK YOU!♂ — ♂FUCK YOU, LEATHERMAN!♂ Billy Herrington. Van Darkholm Danny Lee Mark Wolff Ricardo Milos Aka-sanotam rem aperiam,  laudantium, totam rem aperia eaque ipsa quae ab illo inventore veritatis et ♂ASS♂
                         </p>
                     </div>
                 </article>
-                <article class="flex-article">
+                <article class="flex-article wow slideInLeft">
                     <div class="article-text">
                         <h1>♂Oh, im fucking cumming♂</h1>
                         <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.</p>
@@ -101,13 +109,13 @@
             <section class="fourth-section">
                 <article class="text-section">
                     <div class="block-text">
-                        <h1>WHO ARE WE<span>.</span></h1>
+                        <h1 class="wow slideInLeft">WHO ARE WE<span>.</span></h1>
                         <hr>
-                        <p>Gachists are those people who often roflate over hachimuchi (this is a meme ..... in short, there is such a meme), for example, they often use in their vocabulary such words as: ♂F% ckin sleevs♂, ♂Fisting♂, ♂3hundred bucks♂, ♂Oh shit im sorry♂, ♂boss of this gym♂.
+                        <p class="wow pulse">Gachists are those people who often roflate over hachimuchi (this is a meme ..... in short, there is such a meme), for example, they often use in their vocabulary such words as: ♂F% ckin sleevs♂, ♂Fisting♂, ♂3hundred bucks♂, ♂Oh shit im sorry♂, ♂boss of this gym♂.
                         </p>
                     </div>
                 </article>
-                <article class="flex-article">
+                <article class="flex-article wow slideInLeft">
                     <div class="article-text second">
                         <h1>♂Slaves♂</h1>
                         <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.</p>
@@ -127,38 +135,38 @@
                 </article>
                 <article class="text-section">
                     <div class="block-text">
-                        <h1>MEET OUR TEAM<span>.</span></h1>
+                        <h1 class="wow slideInLeft">MEET OUR TEAM<span>.</span></h1>
                         <hr>
                         <div class="image-creators">
-                            <div class="creators"><img src="images/black1.jpg" alt="">
+                            <div class="creators wow slideInLeft"><img src="images/black1.jpg" alt="">
                                 <h1>Ricardo Milos</h1>
                                 <p>The most recognizable star hachimuchi, big brother, idol of millions, dead hero and just a good person. As a child, he was fond </p>
                             </div>
-                            <div class="creators"><img src="images/black2.jpg" alt="">
+                            <div class="creators wow slideInLeft"><img src="images/black2.jpg" alt="">
                                 <h1>Billy Herrington</h1>
                                 <p>He started his career as a stripper, performing tricks with snakes, wore long boots. I got into the epic wrestling scene due to the fact that muscular .</p>
                             </div>
-                            <div class="creators"><img src="images/black3.jpg" alt="">
+                            <div class="creators wow slideInLeft"><img src="images/black3.jpg" alt="">
                                 <h1>Danny Lee</h1>
                                 <p>Pervert, author of a treatise on male bondage and generally a creative person. Born in Vietnam, made a CUMMING-out there, but emigrated to the UWB as a teenager</p>
                             </div>
-                            <div class="creators"><img src="images/black4.jpg" alt="">
+                            <div class="creators wow slideInLeft"><img src="images/black4.jpg" alt="">
                                 <h1>Van Darkholm</h1>
                                 <p>Real name - Owen Bigland, nickname among gachi fans - Biolante. The Canadian is an amateur bodybuilder, has a college degree in </p>
                             </div>
                         </div>
                     </div>
                 </article>
-                <article class="offer">
+                <article class="offer wow pulse">
                     <h1>Offer of the day<span>.</span></h1>
                     <p>Buy fisting for only 299 bucks, it usually costs 300 bucks, but today is a special promotion</p>
-                    <div><a href="#" class="read-more">BUY NOW</a></div>
+                    <div><a href="#" class="read-more wobble">BUY NOW</a></div>
                 </article>
             </section>
-            <section class="fifth-section">
-                <h1>Better be pain in the muscles
+            <section class="fifth-section ">
+                <h1 class="wow slideInLeft">Better be pain in the muscles
                     than drugs and alcohol <br>Guys hold on to each other, brother for brother and everything will be fucked up. <br>You need to arrange your life until it starts to suit you</h1>
-                <div class="image-section">
+                <div class="image-section wow slideInLeft">
                     <img src="images/section-image.jpg" alt="">
                     <div class="text">
                         <h3>Billy Herrington</h3>
@@ -168,18 +176,18 @@
             </section>
             <section class="form-section">
                 <article class="text-section">
-                    <h1>GET IN TOUCH WITH US<span>.</span></h1>
+                    <h1 class="wow slideInLeft">GET IN TOUCH WITH US<span>.</span></h1>
                     <hr>
                 </article>
                 <div class="form-flex">
-                    <form action="">
+                    <form action="" class="wow slideInLeft">
                         <input name="contactName" type="text" id="contactName" placeholder="Name" value="" minlength="2" required="" aria-required="true"> <br>
                         <input name="contactEmail" type="email" id="contactEmail" placeholder="Email" value="" required="" aria-required="true"> <br>
                         <input name="contactSubject" type="text" id="contactSubject" placeholder="Subject" value=""><br>
                         <textarea name="contactMessage" id="contactMessage" placeholder="Message" rows="10" cols="50" required="" aria-required="true"></textarea><br>
-                        <button class="submitform">Submit</button>
+                        <button class="submitform wobble">Submit</button>
                     </form>
-                    <aside>
+                    <aside class="wow slideInLeft">
                         <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem  accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis  et quasi  architecto  beatae vitae dicta sunt explicabo.</p>
                         <h3>Come Visit</h3>
                         <p>1600 Amphitheatre Parkway <br>
@@ -207,5 +215,23 @@
             </div>
         </footer>
     </header>
+    <script src="js/dist/wow.js"></script>
+  <script>
+    wow = new WOW(
+      {
+        animateClass: 'animated',
+        offset:       100,
+        callback:     function(box) {
+          console.log("WOW: animating <" + box.tagName.toLowerCase() + ">")
+        }
+      }
+    );
+    wow.init();
+    document.getElementById('moar').onclick = function() {
+      var section = document.createElement('section');
+      section.className = 'section--purple wow fadeInDown';
+      this.parentNode.insertBefore(section, this);
+    };
+  </script>
 </body>
 </html>
